--- a/package.json
+++ b/package.json
@@ -9,13 +9,33 @@
     "build-watch": "vue-cli-service  --env.NODE_ENV=development build-watch --mode development"
   },
   "dependencies": {
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
     "core-js": "^3.8.3",
+    "crawler": "^1.4.0",
+    "crypto-browserify": "^3.12.0",
+    "data-forge-fs": "^0.0.9",
     "element-plus": "^2.2.30",
-    "vue": "^3.2.13"
+    "https-browserify": "^1.0.0",
+    "jquery": "^3.6.3",
+    "net": "^1.0.2",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "os-browserify": "^0.3.0",
+    "pandas-js": "^0.2.4",
+    "request": "^2.88.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tls": "^0.0.1",
+    "vue": "^3.2.13",
+    "whacko": "^0.19.1",
+    "xlsx-populate": "^1.21.0",
+    "xmlhttprequest": "^1.8.0",
+    "zipcelx": "^1.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/node": "^18.13.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
