--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "crawler": "^1.4.0",
     "crypto-browserify": "^3.12.0",
     "data-forge-fs": "^0.0.9",
+    "echarts": "^5.4.1",
     "element-plus": "^2.2.30",
     "https-browserify": "^1.0.0",
     "jquery": "^3.6.3",
