--- a/src/manifest.production.json
+++ b/src/manifest.production.json
@@ -1,32 +1,39 @@
 {
     "manifest_version": 3,
-    "name": "bnu-consumption-pattern",
+    "name": "bnu-consumption-scope",
     "version": "0.0.1",
     "description": "Plug-in for mining consumption patterns for students at Beijing Normal University",
     "author": "Shaw",
-    "background": {
-        "service_worker": "/background.js"
-    },
-    "action": {
-        "default_popup": "popup.html",
-        "icons": {
-            "16": "/favicon.ico"
-        }
+    "icons": {
+        "16": "/icon.png",
+        "32": "/icon.png",
+        "48": "/icon.png",
+        "128": "/icon.png"
     },
     "content_scripts": [
         {
-            "matches": ["*://card.bnu.edu.cn/CardManage/*"],
-            "js": ["/content.js"],
+            "matches": [
+                "*://card.bnu.edu.cn/CardManage/*"
+            ],
+            "js": [
+                "/content.js"
+            ],
             "run_at": "document_end"
         }
     ],
-    "options_page": "options.html",
+    "content_security_policy": {
+        "script-src": [
+            "'self'",
+            "'unsafe-eval'"
+        ],
+        "object-src": [
+            "'self'"
+        ]
+    },
     "devtools_page": "devtools.html",
     "permissions": [
-        "*://card.bnu.edu.cn/CardManage/*",
         "tabs",
         "webRequest",
-        "webRequestBlocking",
         "activeTab"
     ]
 }
